--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     -->
     <header>
         <div class="inner head-container">
-          <div class="head-brand"><a href="https://www.fun-coding.org">잔재미코딩</a></div>
-          <div class="head-blog"><a href="https://www.fun-coding.org/daveblog.html">잔재미코딩 블로그 모음</a></div>
+          <div class="head-brand"><a href="https://www.fun-coding.org">재밌는 코딩</a></div>
+          <div class="head-blog"><a href="https://www.fun-coding.org/daveblog.html">재밌는 코딩 블로그 모음</a></div>
         </div>
       </header>
   
@@ -99,7 +99,7 @@
         <div class="inner">
           <div class="section-container">
             <div class="section-title-container">
-              <div class="roadmap-title">잔재미코딩 관련 블로그 및 서적</div>
+              <div class="roadmap-title">재밌는 코딩 관련 블로그 및 서적</div>
             </div>
             <div class="arrow-container">
               <i class="slide-prev fas fa-chevron-circle-left" id="0"></i>
