--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="main">
         <div class="main-container">
           <div class="inner title-container">
-            <div class="title">강의에 집중합니다</div>
+            <div class="title">배움에 집중합니다</div>
             <div class="message">
               정보는 많지만, <br />
               필요한 정보만 잘 정리된 자료를 찾기 어렵고,<br />
